# johnnydecimal

./: Cargo.toml  README.md  create_jd_system.sh
src/: main.rs
src/jdnumber/: mod.rs
src/system/: mod.rs
