[package]
name = "johnnydecimal"
version = "0.1.0"
edition = "2021"
description = "A CLI for working with Johnny Decimal systems (https://johnnydecimal.com/)."
readme = "README.md"
homepage = "https://github.com/Tallented-Code-bot/johnnydecimal"
keywords = ["files", "organization"]
categories = ["command-line-utilites"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir="2"
serde={version="1.0.144", features=["derive"]}
regex="1"
ron="0.8"
clap={version="3.2.17",features=["derive"]}
colored="2.0.0"
libc="0.2.132"
rust-fuzzy-search="0.1.1"


[[bin]]
name="jd"
path="src/main.rs"
